# bevy_minesweeper_rs

./: Cargo.toml  Minesweeper-743d9cca541ceeee.js  Minesweeper-fcc48eb12e0ef882.js  README.md  build.rs  index.html  minesweeper-6065727e4d8ced3e.js  minesweeper-6855ac44c3a2f7c9.js  minesweeper-87973b4b2548b19f.js  minesweeper-c0d9e26574865c58.js  minesweeper-ce32be05e3f9dfc6.js  minesweeper-de6d0066d8fc7a4e.js  minesweeper-e84b623c8e61d448.js
.github/workflows/: CI.yml  release-android.yml  release.yml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/ios-src/: Info.plist
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: lib.rs  main.rs
src/actions/: mod.rs
src/components/: Uncover.rs  bomb.rs  bomb_neighbor.rs  button_colors.rs  coordinates.rs  flag.rs  menu.rs  mod.rs  stopwatch.rs  timer.rs  uisettings.rs  uncover.rs
src/components/menu/: main_menu_plugin.rs  mod.rs  selection_mode_plugin.rs  settings_menu_plugin.rs  widgets.rs
src/game/: board.rs  bounds.rs  mod.rs  settings.rs  tile.rs  tile_map.rs
src/rendering/: FaceIndex.rs  mod.rs  tile_cube.rs
src/resources/: assets.rs  board.rs  bounds.rs  events.rs  loading.rs  mod.rs  settings.rs  tile.rs  tile_map.rs
src/scenes/: endgame_plugin.rs  main_menu_plugin.rs  mod.rs  settings_menu_plugin.rs  widgets.rs
src/system/: camera.rs  cross_flag.rs  flagged.rs  input.rs  mod.rs  uncover.rs
src/widgets/: button.rs  mod.rs  settings.rs  tab_container.rs  text.rs
