[package]
name = "minesweeper"
version = "0.1.2"
publish = false
authors = ["Me"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
strip = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
    "bevy_text",
    "default_font",
    "bevy_ui",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "wayland",
    "x11",
    "multi_threaded",
    "webgl2",
    "png"
] }
bevy_kira_audio = { version = "0.20" }
bevy_asset_loader = { version = "0.21" }
rand = { version = "0.8.5" }
webbrowser = { version = "1.0.1", features = ["hardened"] }
bevy-inspector-egui = { version = "0.25.1", optional = true }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30.5", default-features = false }
image = { version = "0.25.2", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
hashbrown = "0.14.5"
colored = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
embed-resource = "2.4.3"
