[package]
name = "minesweeper"
version = "0.2.0"
publish = false
authors = ["Me"]
edition = "2021"
exclude = ["dist", "build", "assets"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
strip = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
    "bevy_text",
    "default_font",
    "bevy_ui",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "wayland",
    "x11",
    "multi_threaded",
    "webgl2",
    "png"
] }
# keep the following in sync with Bevy's dependencies
bevy_asset_loader = { version = "0.21", default-features = false }
sickle_ui = { rev = "9c6ebb6", git = "https://github.com/UkoeHB/sickle_ui" }
web-time = { version = "1.1.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
winit = { version = "0.30.5", default-features = false }
image = { version = "0.25.2", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }

## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
[build-dependencies]
embed-resource = "2.5.0"
